--- a/resume/index.html
+++ b/resume/index.html
@@ -33,16 +33,18 @@
 <li>Blender</li>
 </ul>
 
-<h5>Links and Socials</h5>
+<h3>Links and Socials</h3>
 <p>This segment will be updated as needed. For now I only have a couple of social outlets which are the following:</p>
 <ul>
 <li><a href="https://github.com/Cherkasa28">Github</a></li>
 <li><a href="cherkasa28@live.seminolestate.edu">Email</a></li>
+</ul>
 
-<h6>Examples of work</h6>
-<img src="momokopaint.jpg"> <img src="fashion.png"> <img src="unitypiece1.png">
-<img src="unitypiece2.png">
-<img src="drowning.png">
-
+<h2>Examples of work</h2>
+<img src="momokopaint.jpg"><img alt="A girl with blue hair against an orange backdrop">
+<img src="fashion.png"><img alt="two people, one gothic and one more frilly">
+<img src="unitypiece1.png"><img alt="pattern featuring vampires, witches, moons, and stars">
+<img src="unitypiece2.png"><img alt="pattern involving feathers, envelopes, wax seals and stamps.">
+<img src="drowning.png"><img alt="a girl in a ball dress pulled beneath the sea">
 </body>
 </html>
