--- a/resume/index.html
+++ b/resume/index.html
@@ -41,8 +41,8 @@
 </ul>
 
 <h2>Examples of work</h2>
-<img src="momokopaint.jpg"><img alt="A girl with blue hair against an orange backdrop">
-<img src="fashion.png"><img alt="two people, one gothic and one more frilly">
+<img src="momokopaint.jpg"><img alt="A girl with blue hair against an orange backdrop"><br>
+<img src="fashion.png"><img alt="two people, one gothic and one more frilly"<br>
 <img src="unitypiece1.png"><img alt="pattern featuring vampires, witches, moons, and stars">
 <img src="unitypiece2.png"><img alt="pattern involving feathers, envelopes, wax seals and stamps.">
 <img src="drowning.png"><img alt="a girl in a ball dress pulled beneath the sea">
